# neat-driver

./: README.md  config-feedforward.txt  main.py  pyproject.toml  requirements.txt
assets/checkpoints/windy/: neat-checkpoint-14  neat-checkpoint-19  neat-checkpoint-24  neat-checkpoint-29  neat-checkpoint-34  neat-checkpoint-39  neat-checkpoint-4  neat-checkpoint-44  neat-checkpoint-49  neat-checkpoint-54  neat-checkpoint-59  neat-checkpoint-64  neat-checkpoint-69  neat-checkpoint-9
assets/configs/: config-feedforward.txt
assets/tracks/: oval.xml  windy.xml
src/: __init__.py  ai_driver.py  car.py  consts.py  driver_base.py  human_driver.py  obstacle.py  obstacle_base.py  sim_object.py  simulation.py  texture_pack.py  track.py
tests/: driver_base_test.py  mock_test.py  sim_object_test.py
